# pulsesuite

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AUTHORS.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  README.md  authors.html  bench_collect.sh  bench_threads.sh  bench_threads_pbs.sh  bibliography.html  building_simulations.html  citation.html  code_of_conduct.html  contributing.html  cuda_test.py  gallery.html  genindex.html  index.html  integrations.html  integrations.md  justfile  notes.txt  objects.inv  params_reference.html  py-modindex.html  pyproject.toml  readme.html  requirements.txt  run_pulsesuite_sbetestprop.sh  run_pulsesuite_sbetestpropnov30.sh  search.html  searchindex.js  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  tox.yml
PSTD3D/examples/: SBEs_basic_example.py  SBEs_domain_example.py  SBEs_workflow_example.py  coulomb_example.py  coulombpythonic_example.py  dcfield_basic_example.py  dcfield_domain_example.py  dcfield_workflow_example.py  performance_benchmark.py  phononspythonic_example.py  qwoptics_basic_example.py  qwoptics_domain_example.py  qwoptics_workflow_example.py
PSTD3D/mermaid/: 0_._sbes.mmd  0_calcrhou.mmd  0_errfun.mmd  10_pstd3.mmd  4_dephasing.mmd  4_usefulsubs.mmd  6_coulomb.mmd  6_dcfield.mmd  6_emission.mmd  6_helpchiqw.mmd  6_qwoptics.mmd  8_testfft.mmd  9_correlations.mmd  mega.mmd
PSTD3D/params/: pulse.params  qwarray.params
PSTD3D/params/templates/: mb.params  pulse.params  qw.params  qwarray.params
PSTD3D/scripts/: corrdoit.sh  makesim.sh
PSTD3D/sim/params/: qw.params
PSTD3D/sim/scripts/: ._setup.sh  organize.sh  setup.sh
PSTD3D/src/: SBETestpythonic.py  SBEs.py  SBEspythonic.py  coulomb.py  coulombpythonic.py  dcfieldpythonic.py  dephasing.py  dephasingpythonic.py  emission.py  emissionpythonic.py  epsrtl.py  epsrtlpythonic.py  helpers.py  helperspythonic.py  phonons.py  phononspythonic.py  phost.py  qwoptics.py  qwopticspythonic.py  rhoPJ.py  sbetestprop.py  sbetestpropnov30.py  splinerpythonic.py  typepulse.py  typespace.py  typetime.py  usefulsubs.py  usefulsubspythonic.py
PSTD3D/src/__pycache__/: coulombpythonic.CoulombIntegralCalculator._jit_calculate_1d_integral-156.py310.1.nbc  coulombpythonic.CoulombIntegralCalculator._jit_calculate_1d_integral-156.py310.nbi  coulombpythonic.ManyBodyCalculator._jit_build_k3_matrix-333.py310.1.nbc  coulombpythonic.ManyBodyCalculator._jit_build_k3_matrix-333.py310.nbi  dcfieldpythonic.EnergyRenormalizationCalculator._jit_calculate_renormalized_energy-133.py310.1.nbc  dcfieldpythonic.EnergyRenormalizationCalculator._jit_calculate_renormalized_energy-133.py310.2.nbc  dcfieldpythonic.EnergyRenormalizationCalculator._jit_calculate_renormalized_energy-133.py310.nbi  dcfieldpythonic.PhononScatteringCalculator._jit_calculate_fdrift2_matrices-271.py310.1.nbc  dcfieldpythonic.PhononScatteringCalculator._jit_calculate_fdrift2_matrices-271.py310.nbi  dephasingpythonic.DephasingRateCalculator._jit_calculate_electron_dephasing-317.py310.1.nbc  dephasingpythonic.DephasingRateCalculator._jit_calculate_electron_dephasing-317.py310.nbi  dephasingpythonic.DephasingRateCalculator._jit_calculate_hole_dephasing-348.py310.1.nbc  dephasingpythonic.DephasingRateCalculator._jit_calculate_hole_dephasing-348.py310.nbi  emissionpythonic.CoulombEnergyCalculator._jit_calculate_coulomb_energy-219.py310.1.nbc  emissionpythonic.CoulombEnergyCalculator._jit_calculate_coulomb_energy-219.py310.nbi  epsrtlpythonic.MathematicalFunctions.atanJG-145.py310.1.nbc  epsrtlpythonic.MathematicalFunctions.atanJG-145.py310.nbi  epsrtlpythonic.MathematicalFunctions.eng-120.py310.1.nbc  epsrtlpythonic.MathematicalFunctions.eng-120.py310.nbi  epsrtlpythonic.MathematicalFunctions.fT0-126.py310.1.nbc  (+21 more)
PSTD3D/tests/: README_test_emissionpythonic.md  TestSpace.py  TestTime.py  conftest.py  test_SBEs.py  test_SBEspythonic.py  test_alt_coulomb.py  test_coulomb.py  test_coulombpythonic.py  test_dcfield.py  test_dcfieldpythonic.py  test_dephasing.py  test_emission.py  test_emissionpythonic.py  test_emissionpythonic_simple.py  test_epsrtl.py  test_phonons.py  test_phononspythonic.py  test_phost.py  test_phostpythonic.py  test_phostpythonic_simple.py  test_qwoptics.py  test_qwopticspythonic.py  test_typespace.py  test_usefulsubs.py
_sources/: bibliography.md.txt  code_of_conduct.md.txt  index.md.txt  integrations.md.txt  params_reference.md.txt  readme.md.txt
_sources/examples/: 03_coulomb.myst.md.txt  04_phonons.myst.md.txt  05_optics.myst.md.txt  06_transport.myst.md.txt
_static/js/: hoverxref.js
aiprompts/: test.txt
docs/: conf.py  index.rst
docs/source/: authors.md  bibliography.md  building_simulations.md  citation.md  conf.py  gallery.md  index.md  pulsesuite.bib  readme.md
examples/: 01_quickstart.myst.html  02_architecture.myst.html  03_coulomb.myst.html  04_phonons.myst.html  05_optics.myst.html  06_transport.myst.html
lib/aiprompts/: main.txt
src/: constants.py  fftw.py  rungekutta.py
src/pulsesuite/: __init__.py
src/pulsesuite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/PSTD3D/: test_coulomb.py  test_cpml.py  test_dcfield.py  test_dephasing.py  test_epsrtl.py  test_phonons.py  test_phost.py  test_pstd3d.py  test_qwoptics.py  test_tfsf.py  test_typepulse.py  test_typespace.py  test_typetime.py  test_usefulsubs.py
tests/libpulsesuite/: testSpliner.py  test_calcintlength.py  test_constants.py  test_f2kcli.py  test_helpers.py  test_integrator.py  test_integrator_functional.py  test_logger.py  test_materialproperties.py  test_nrutils.py  test_pulsegenerator.py  test_spliner.py  test_strings.py  test_units.py
tools/: generate_acm_docx.py
(+479 files in other folders)
